<resources>
    <string name="app_name">FindMe</string>
    <string name="search_button">Button to search forms</string>
    <string name="create_button">Button to create a new form</string>
    <string name="account_button">Button to open your account</string>
    <string name="title_text">Title</string>
    <string name="create_activity_title">Create a new form</string>
    <string name="description_text">Description</string>
    <string name="create_btn_text">Create</string>
    <string name="search_forms">Search forms</string>
    <string name="avatar_descr">Avatar of account</string>
    <string name="account_name">Name</string>
    <string name="account_surname">Surname</string>
    <string name="account_login">Login</string>
    <string name="account_password">Password</string>
    <string name="my_forms_button">My forms</string>
    <string name="exit_the_account_button">Exit the account</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in">Log in</string>
    <string name="enter_your_name">Enter name</string>
    <string name="enter_your_surname">Enter surname</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="create_account">Create account</string>
    <string name="warning">Warning</string>
    <string name="warning_message">Are you sure you want to log out of the account?</string>
    <string name="yes">Yes</string>
    <string name="back">Back</string>
    <string name="enter_your_login">Enter login</string>
    <string name="enter_your_password">Enter password</string>
    <string name="click_to_choose_avatar">Click on image to choose avatar</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="login">Login</string>
    <string name="edit_account_button">Edit account button</string>
    <string name="remember">Login can\'t be changed. Remember it, please.</string>
    <string name="filters_button">Filters button</string>
    <string name="add_tag_to_find">Add tag to find</string>
    <string name="clear">Clear</string>
    <string name="delete_this_tag">Delete this tag</string>
    <string name="ok">OK</string>
    <string name="add_tag">Add tag</string>
    <string name="please_write_tag">Please, write tag:</string>
    <string name="here_will_we_tags_to_filter">Here will be your tags to filter</string>
    <string name="tap_to_see_your_location_need_to_be_enabled_gps">Tap to see your location. Need to be enabled gps</string>
    <string name="add_location_to_sort">Add location to sort</string>
    <string name="select">Select</string>
    <string name="filter_by_location">Filter by location</string>
    <string name="this_is_avatar_of_author_of_form">This is avatar of author of form</string>
    <string name="nothing_was_found_for_your_request">Nothing was found for your request...</string>
    <string name="your_avatar_that_will_be_on_form">Your avatar that will be on form</string>
    <string name="use_name_and_surname">Use name and surname</string>
    <string name="you_haven_t_selected_coordinates">You haven\'t selected coordinates</string>
    <string name="tap_to_see_location_of_form">Watch location</string>
    <string name="add_location">Add location</string>
    <string name="change_location">Change location</string>
    <string name="edit_form">Edit form</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="tap_to_add_form_to_favourite">Tap to add form to favourite</string>
    <string name="favourite_forms">Favourite forms</string>
    <string name="clear_selected_location">Clear selected location</string>
    <string name="clear_location">Clear location</string>
    <string name="radius">Radius:</string>
    <string name="km">km</string>
    <string name="delete_the_account">Delete the account</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="no_internet_connection">NO INTERNET CONNECTION</string>
    <string name="your_location">Your Location</string>
    <string name="app_founded_you">App founded you!</string>
    <string name="turn_on_geolocation">Turn on geolocation</string>
    <string name="selected_location">Selected location</string>
    <string name="click_select_to_confirm">Click \"Select\" to confirm</string>
    <string name="choose_radius">"Choose radius: "</string>
    <string name="longitude_latitude">Longitude: %1$s; Latitude: %2$s</string>
    <string name="tags">Tags: %1$s</string>
    <string name="download_google_maps">Download Google Maps</string>
    <string name="you_want_to_delete_this_form">You want to delete this form?</string>
    <string name="please_fill_in_title_and_description">Please, fill in title and description</string>
    <string name="title_can_not_have_less_then_3_symbols">Title can not have less then 3 symbols</string>
    <string name="description_can_not_have_less_then_3_symbols">Description can not have less then 3 symbols</string>
    <string name="only_5_tags">Only 5 tags!</string>
    <string name="please_fill_in_title">Please, fill in title</string>
    <string name="please_fill_in_description">Please, fill in description</string>
    <string name="are_you_sure_want_to_delete_account">Are you sure want to delete account?</string>
    <string name="this_action_will_delete_account_and_all_forms_of_it">This action will delete account and all forms of it</string>
    <string name="login_can_not_have_less_then_3_symbols">Login can not have less then 5 symbols</string>
    <string name="password_can_not_have_less_then_6_symbols">Password can not have less then 6 symbols</string>
    <string name="name_can_not_have_less_then_3_symbols">Name can\'t have less then 3 symbols</string>
    <string name="surname_can_not_have_less_then_3_symbols">Surname can\'t have less then 3 symbols</string>
    <string name="please_enter_your_login_and_password">Please, enter your login and password</string>
    <string name="this_login_is_engaged">This login is engaged</string>
    <string name="invalid_input">Invalid input</string>
    <string name="wrong_password">Wrong password</string>
    <string name="enter_new_data">Enter new data</string>
    <string name="en">Eng.</string>
    <string name="ru">Russ.</string>
    <string name="allow_use_of_geolocation">Allow use of geolocation</string>
    <string name="turn_on_notification_for_proper_work">Turn on notification for proper work</string>
    <string name="set_default">Set default</string>
    <string name="done">Done</string>
    <string name="app_theme">App theme:</string>
    <string name="language">Language</string>
    <string name="checking_in_progress_please_wait">Checking in progress, please wait</string>
    <string name="name_can_t_have_numbers">Name can\'t have numbers</string>
    <string name="surname_can_t_have_numbers">Surname can\'t have numbers</string>
    <string name="empty">Empty</string>
    <string name="click_here_to_see_the_location">Click here to see the location</string>
    <string name="tap_to_see_chosen_location">Tap to see chosen location</string>
</resources>