<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.account.AccountFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/AvatarImage"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/avatar_descr"
            android:scaleType="centerCrop"
            android:src="@drawable/profile_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/accountName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/account_name"
            android:textSize="24sp"
            android:layout_marginStart="32dp"
            app:layout_constraintStart_toEndOf="@+id/AvatarImage"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/AvatarImage"/>

        <TextView
            android:id="@+id/accountLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/login"
            android:textColor="@color/gray"
            android:textSize="20sp"
            app:layout_constraintLeft_toRightOf="@+id/AvatarImage"
            app:layout_constraintTop_toBottomOf="@id/accountName" />

        <Button
            android:id="@+id/my_forms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/basic_button"
            android:text="@string/my_forms_button"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/AvatarImage" />

        <Button
            android:id="@+id/favourite_forms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/basic_button"
            android:text="@string/favourite_forms"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/my_forms" />

        <Button
            android:id="@+id/exit_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/basic_button"
            android:text="@string/exit_the_account_button"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/favourite_forms" />

        <ProgressBar
            android:id="@+id/deleting_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="@id/delete_account"
            app:layout_constraintStart_toStartOf="@id/delete_account"
            app:layout_constraintEnd_toEndOf="@id/delete_account"/>

        <Button
            android:id="@+id/delete_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/basic_button"
            android:text="@string/delete_the_account"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/exit_account" />

        <ImageButton
            android:id="@+id/editButton"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginEnd="16dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/edit_account_button"
            android:scaleType="centerCrop"
            android:src="@drawable/edit_button_"
            app:layout_constraintBottom_toBottomOf="@id/AvatarImage"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
