<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.forms.CreateFormActivity">
    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:title="@string/edit_form"
            app:titleTextAppearance="@style/ToolBarStyle"
            app:buttonGravity="center_vertical"
            android:paddingVertical="5dp"
            app:navigationIcon="@drawable/back_button_resize" />

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/click_to_choose_avatar"
            app:srcCompat="@drawable/profile_button"
            android:scaleType="centerCrop"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:text="Author"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/name_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/use_name_and_surname"
            android:textColor="@color/gray"
            android:layout_gravity="center_horizontal" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/title_textInpLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp"
            android:layout_marginHorizontal="13dp"
            style="@style/TextInputLayout"
            android:layout_marginBottom="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/title_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_text"
                android:maxLines="1"
                android:maxLength="50"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/description_textInpLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="200dp"
            style="@style/TextInputLayout"
            android:layout_marginHorizontal="13dp"
            android:layout_marginBottom="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/description_editText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="top"
                android:minHeight="200dp"
                android:hint="@string/description_text"
                android:maxLength="500"/>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/tags_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="13dp">
            <Button
                android:id="@+id/addTagButton"
                android:layout_width="0dp"
                android:layout_height="40dp"
                app:layout_constraintEnd_toStartOf="@id/clearTagsButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/add_tag_to_find"/>

            <Button
                android:id="@+id/clearTagsButton"
                android:layout_width="0dp"
                android:enabled="false"
                android:layout_height="40dp"
                app:layout_constraintStart_toEndOf="@id/addTagButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/clear"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/tagsRV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/addTagButton" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="13dp">
            <Button
                android:id="@+id/addLocationButton"
                android:layout_width="0dp"
                android:layout_height="40dp"
                app:layout_constraintEnd_toStartOf="@id/clearLocationButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/change_location"/>

            <Button
                android:id="@+id/clearLocationButton"
                android:layout_width="0dp"
                android:enabled="false"
                android:layout_height="40dp"
                app:layout_constraintStart_toEndOf="@id/addLocationButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/clear"/>
            <TextView
                android:id="@+id/selected_coordinates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/addLocationButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/loadingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:visibility="gone"/>

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/save_form"
            android:paddingHorizontal="30dp"
            android:textSize="24sp"/>

        <Button
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/delete_form"
            android:paddingHorizontal="30dp"
            android:textSize="24sp"/>
    </LinearLayout>

</ScrollView>