<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateFormActivity">
    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/title_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/crate_activity_title">
            <ImageButton
                android:id="@+id/back_title_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/back_button_resize"
                android:background="@android:color/transparent"
                android:paddingHorizontal="20dp"
                android:layout_gravity="center_vertical"/>
            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_activity_title"
                android:textSize="35sp"
                android:layout_gravity="center"
                android:paddingVertical="20dp"
                android:textStyle="bold"
                android:textColor="@color/white" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/title_textInpLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp"
            android:layout_marginHorizontal="13dp"
            style="@style/TextInputLayout"
            android:layout_marginBottom="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/title_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_text" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/description_textInpLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="200dp"
            style="@style/TextInputLayout"
            android:layout_marginHorizontal="13dp"
            android:layout_marginBottom="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/description_editText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="top"
                android:minHeight="200dp"
                android:hint="@string/description_text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/create_btn_text"
            android:paddingHorizontal="30dp"
            android:backgroundTint="@color/selected"
            android:textSize="24sp"/>

    </LinearLayout>

</ScrollView>